# MoonGlobe

./: .gitignore  CMakeLists.txt  README.md  build.sh  rebuild.sh
resources/: resources.conf
src/: configure.h  configure.h.cmake  main.cpp  moonglobe.cpp  moonglobe.h
